# fantasy-role-playing-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  fantasy-role-playing.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  fantasy-role-playing.rockspec  fantasy-role-playing_sdk.lua  fantasy-role-playing_types.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  (+2 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  fantasyroleplaying_sdk.py  fantasyroleplaying_types.py  features.py  pyproject.toml
py/core/: context.py  control.py  operation.py  response.py  utility_type.py
py/entity/: entity_entity.py  roll_entity.py
py/feature/: base_feature.py  clienttrack_feature.py  debug_feature.py  log_feature.py  ratelimit_feature.py  retry_feature.py  streaming_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_entity_direct.py  test_entity_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_roll_direct.py  test_roll_entity.py
py/utility/: clean.py  done.py  feature_add.py  feature_hook.py  make_context.py  make_fetch_def.py  make_options.py  make_point.py  make_response.py  make_result.py  make_spec.py  param.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_params.py  prepare_query.py  register.py  result_basic.py  result_headers.py
(+427 files in other folders)
